# esp32-wasm-base

./: .gitignore  .gitmodules  APIs.md  CMakeLists.txt  Cargo.toml  README.md  sdkconfig
.devcontainer/: Dockerfile
base/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
base/.devcontainer/: Dockerfile  devcontainer.json
base/main/: CMakeLists.txt  app_events.h  app_mgr.c  app_mgr.h  console.c  fs_mgr.c  fs_mgr.h  i2c_mgr.c  i2c_mgr.h  main.c  mqtt.c  mqtt_mgr.c  mqtt_mgr.h  wasm.c  wasm.h  wifi.c  wifi_mgr.c
base/modules/wasm3/: CMakeLists.txt
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  options.rs
example/: Cargo.toml
example/.cargo/: config
example/src/: main.rs
lib/: Cargo.toml
lib/src/: args.rs  delay.rs  i2c.rs  lib.rs  logger.rs  prelude.rs  print.rs  runtime.rs
main/: CMakeLists.txt  app_mgr.c  app_mgr.h  console.c  console.h  fs_mgr.c  fs_mgr.h  main.c
modules/comms/: CMakeLists.txt  mqtt_cmds.c  mqtt_mgr.c  mqtt_mgr.h
modules/config/: CMakeLists.txt  config_cmds.c  config_mgr.c  config_mgr.h
modules/networking/: CMakeLists.txt  wifi_mgr.c  wifi_mgr.h
modules/runtime/: CMakeLists.txt  gpio_mgr.h  runtime.c  runtime.h
modules/wasm3/: CMakeLists.txt
