[package]
name = "esp32-wasm-example"
version = "0.1.0"
authors = ["ryan kurte <ryan@kurte.nz>"]
repository = "https://github.com/ryankurte/rust-esp32-wasm"
edition = "2018"
license = "GPL-3.0"

[dependencies]
log = "0.4.8"
panic-abort = "0.3.2"
libc = "0.2.66"
embedded-hal = "0.2.3"
sensor-scd30 = { version = "0.3.0", default-features = false }

[dependencies.esp32-wasm-hal]
path = "../lib"
features = [ "logger" ]

[profile.release]
opt-level = "z"
lto = true
panic = 'abort'
codegen-units = 1
