[package]
name = "esp32-wasm-hal"
description = "A HAL for the ESP32 WASM environment"
version = "0.1.0"
repository = "https://github.com/ryankurte/rust-esp32-wasm"
authors = ["ryan kurte <ryan@kurte.nz>"]
edition = "2018"
license = "GPL-3.0"


[features]
logger = ["log"]

[dependencies]
log = { version = "0.4.8", optional = true }
embedded-hal = "0.2.3"
